Bug 1763880 - Explicitly disable WMF hardware video decoding in the RDD process, which was previously broken. r=alwu

Differential Revision: https://phabricator.services.mozilla.com/D153808